# production-agent-cookiecutter-langgraph

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
rendered-project/: .env.example  .gitignore  Dockerfile  Makefile  README.md  langgraph.json  pyproject.toml
rendered-project/app/: main.py
rendered-project/app/application/: chat.py  use_case.py
rendered-project/app/application/workflows/chat/: graph.py  nodes.py  state.py
rendered-project/app/application/workflows/wf1/: graph.py  state.py
rendered-project/app/config/: config.py
rendered-project/app/domain/: entities.py
rendered-project/app/infrastructure/: llm_service.py
rendered-project/app/routes/: chat.py  system.py
rendered-project/notebooks/: nb_1.ipynb
{{cookiecutter.project_name}}/: Dockerfile  Makefile  README.md  langgraph.json  pyproject.toml
{{cookiecutter.project_name}}/app/: main.py
{{cookiecutter.project_name}}/app/application/: chat.py
{{cookiecutter.project_name}}/app/application/workflows/chat/: nodes.py  state.py
{{cookiecutter.project_name}}/app/application/workflows/wf1/: nodes.py
{{cookiecutter.project_name}}/app/config/: config.yaml
{{cookiecutter.project_name}}/app/domain/: services.py
{{cookiecutter.project_name}}/app/routes/: chat.py  system.py  wf1.py
{{cookiecutter.project_name}}/notebooks/: nb_1.ipynb
